# simulAOEr

./: AoE2_Language  AoE2_Language.md  LICENSE  README.md  main.py  pyproject.toml
GLOSSARY/: phrases.md  phrases.md.txt  taunts.md
Ideas/: Thoughts.md
add_poetry/test-poetry/: pyproject.toml
chore_poetry/test-poetry/tests/: test_test_poetry.py
design/: Ideas.md
docs/: dev.md
docs/glossary/: phrases.md
simulaoer/: __main__.py
simulaoer/objects/: __main__.py  task.py  town-center.py
test/: test-typer.py
test/poetry-test/: pyproject.toml
test/poetry-test/tests/: test_poetry_test.py
tests/: test_simulaoer.py
