[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["phrenkie-caibi <filipzdarilek123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
xanes = "^0.1.1-alpha.0"
jupyterlab = "^3.4.3"
procaine = "^0.1.0"
geemap = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
