[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["phrenkie-caibi <filipzdarilek123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
